<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/contact_title"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="16dp"
        android:textSize="30sp"
        android:text="@string/contact_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_subtitile"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/contact_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingTop="16dp"
        android:textSize="20sp"
        android:text="@string/contact_phone_1" />
    <TextView
        android:id="@+id/contact_2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:layout_weight="0.38"
        android:paddingTop="16dp"
        android:textSize="20sp"
        android:text="@string/contact_phone_2" />


    <Button
        android:id="@+id/go_to_map_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_en_maps" />
</LinearLayout>